Update social, incorporate photoDisplay in gallery

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,9 +3,7 @@ import Social from "./Social.astro";
 ---
 
 <footer>
-  <Social platform="twitter" username="astrobuild" />
-  <Social platform="github" username="withastro" />
-  <Social platform="youtube" username="astrobuild" />
+  <Social platform="instagram" username="amity.warme" />
 </footer>
 
 <style>
