--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -91,10 +91,10 @@ body {
   outline: 1px solid black;
 }
 .gallery-button.prev {
-  left: 1rem;
+  left: 2%;
 }
 .gallery-button.next {
-  right: 1rem;
+  right: 2%;
 }
 .gallery > ul {
   margin: 0;
