--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -1,11 +1,12 @@
 ---
-const { title, description, url } = Astro.props;
+const { title, description, url, date } = Astro.props;
 ---
 
 <li class="bloglist-item">
   <a href={url}>
     <h4>{title}</h4>
     <p>{description}</p>
+    <p>{date}</p>
   </a>
 </li>
 <style>
