--- a/src/pages/content.astro
+++ b/src/pages/content.astro
@@ -4,7 +4,7 @@ import TagDisplay from "../components/TagDisplay.astro";
 import BlogPost from "../components/BlogPost.astro";
 const allPosts = await Astro.glob('./posts/*.md');
 const sortedPosts = [...allPosts].sort((a, b) => {
-  return new Date(b.frontmatter.pubDate) - new Date(a.frontmatter.pubDate)
+  return +new Date(b.frontmatter.pubDate) - +new Date(a.frontmatter.pubDate)
 });
 const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
 const pageTitle = "Content";
