Add more images to gallery

--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -11,6 +11,12 @@ import johnny from "../images/gallery/JohnnyLat.jpg";
 import mark from "../images/gallery/mark.jpg";
 import psycho from "../images/gallery/psycho.jpg";
 import rude from "../images/gallery/rudeboys.jpg";
+import dragon from "../images/gallery/dragon.jpg";
+import air from "../images/gallery/air.jpg";
+import fly from "../images/gallery/fly.jpg";
+import monastery from "../images/gallery/monastery.jpg";
+import space from "../images/gallery/space.jpeg";
+import gate from "../images/gallery/gate.jpg";
 
 const images = [golden, barnacle, wolverine]
 const photoArray = Astro.props.array;
@@ -52,7 +58,7 @@ const array = [
     location: `Joshua Tree`,
     credit: {
       name: 'Jeremy Schoenborn',
-      site: 'https://www.instagram.com/jerrrrrrrrbs',
+      site: 'https://www.instagram.com/jerrrrrrrrbs/',
     }
   },
   {
@@ -62,7 +68,7 @@ const array = [
     location: `Yosemite`,
     credit: {
       name: 'Samuel Crossley',
-      site: 'https://samuelcrossley.media',
+      site: 'https://samuelcrossley.media/',
     }
   },
   {
@@ -82,7 +88,7 @@ const array = [
     location: `Sedona`,
     credit: {
       name: 'Blake McCord',
-      site: '',
+      site: 'https://www.mccordmedia.org/',
     }
   },
   {
@@ -102,7 +108,7 @@ const array = [
     location: 'The Waterfall, Sedona',
     credit: {
       name: 'JP Melville',
-      site: 'https://www.youtube.com/@v3rtmedia',
+      site: 'https://www.youtube.com/@v3rtmedia/',
     }
   },
   {
@@ -112,17 +118,77 @@ const array = [
     location: `Yosemite`,
     credit: {
       name: 'Samuel Crossley',
-      site: 'https://samuelcrossley.media',
+      site: 'https://samuelcrossley.media/',
+    }
+  },
+  {
+    src: air,
+    alt: 'Amity attempting Air Swedin',
+    caption: 'Air Swedin',
+    location: 'Indian Creek',
+    credit: {
+      name: 'Scott Eubank',
+      site: 'https://www.scotteubank.com/',
+    }
+  },
+  {
+    src: dragon,
+    alt: 'Amity on Enter the Dragon',
+    caption: 'Enter the Dragon',
+    location: `The Fins, ID`,
+    credit: {
+      name: 'Ben Crawford',
+      site: '',
+    }
+  },
+  {
+    src: fly,
+    alt: 'Amity on Learning to Fly',
+    caption: 'Learning to Fly',
+    location: 'Indian Creek',
+    credit: {
+      name: 'Felipe Nordenflycht',
+      site: 'https://www.felipesh.com/',
+    }
+  },
+  {
+    src: gate,
+    alt: 'Amity on Golden Gate',
+    caption: 'Golden Gate',
+    location: `Yosemite`,
+    credit: {
+      name: 'Felipe Nordenflycht',
+      site: 'https://www.felipesh.com/',
+    }
+  },
+  {
+    src: space,
+    alt: 'Amity on Buffaloes in Space',
+    caption: 'Buffaloes in Space',
+    location: 'Cathedral Spires, CO',
+    credit: {
+      name: 'Connor Warme',
+      site: '',
+    }
+  },
+  {
+    src: monastery,
+    alt: 'Amity on Psychatomic',
+    caption: 'Psychatomic',
+    location: `The Monastery, CO`,
+    credit: {
+      name: 'Felipe Nordenflycht',
+      site: 'https://www.felipesh.com/',
     }
   },
   {
     src: rude,
     alt: 'Amity on Rude Boys',
     caption: 'Rude Boys',
-    location: `Smith Rock`,
+    location: `Smith Rock, OR`,
     credit: {
       name: 'Simon Carter',
-      site: 'https://www.onsight.com/au',
+      site: 'https://www.onsight.com/au/',
     }
   },
   {
