Remove content tags page/ dark mode

--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -35,7 +35,7 @@ const array = [
     src: johnny,
     alt: 'Amity on Johnny Lat',
     caption: 'Johnny Lat',
-    location: `Turkey Rocks`,
+    location: `Turkey Rocks, CO`,
     credit: {
       name: 'Adam Pawlikiewicz',
       site: 'https://www.adampawlikiewicz.com/',
@@ -55,7 +55,7 @@ const array = [
     src: stingray,
     alt: 'Amity on Stingray',
     caption: 'Stingray',
-    location: `Joshua Tree`,
+    location: `Joshua Tree, CA`,
     credit: {
       name: 'Jeremy Schoenborn',
       site: 'https://www.instagram.com/jerrrrrrrrbs/',
@@ -85,7 +85,7 @@ const array = [
     src: lifeline,
     alt: 'Amity on Lifeline',
     caption: 'Lifeline',
-    location: `Sedona`,
+    location: `Sedona, AZ`,
     credit: {
       name: 'Blake McCord',
       site: 'https://www.mccordmedia.org/',
@@ -95,7 +95,7 @@ const array = [
     src: six,
     alt: 'Amity on Six Star Crack',
     caption: 'Six Star Crack',
-    location: `Indian Creek`,
+    location: `Indian Creek, UT`,
     credit: {
       name: 'Tempei Takeuchi',
       site: 'https://www.tempeiphotography.com/',
@@ -105,7 +105,7 @@ const array = [
     src: wolverine,
     alt: 'Amity onsighting Wolverine',
     caption: 'Onsighting Wolverine (13-)',
-    location: 'The Waterfall, Sedona',
+    location: 'The Waterfall, AZ',
     credit: {
       name: 'JP Melville',
       site: 'https://www.youtube.com/@v3rtmedia/',
@@ -125,7 +125,7 @@ const array = [
     src: air,
     alt: 'Amity attempting Air Swedin',
     caption: 'Air Swedin',
-    location: 'Indian Creek',
+    location: 'Indian Creek, UT',
     credit: {
       name: 'Scott Eubank',
       site: 'https://www.scotteubank.com/',
@@ -145,7 +145,7 @@ const array = [
     src: fly,
     alt: 'Amity on Learning to Fly',
     caption: 'Learning to Fly',
-    location: 'Indian Creek',
+    location: 'Indian Creek, UT',
     credit: {
       name: 'Felipe Nordenflycht',
       site: 'https://www.felipesh.com/',
