--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -9,3 +9,10 @@
     <a href="/contact">Contact</a>
   </div>
 </nav>
+<style>
+  nav {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+</style>
