Small styling edits on header

--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -26,7 +26,6 @@ import '../styles/global.css';
     top: 0;
     width: 100vw;
     z-index: 800;
-    background-color: rgba(0, 0, 0, 0.3);
-    padding: 2% 0;
+    padding: 1rem 2rem;
   }
 </style>
