--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,10 @@ h1 {
   margin: 1rem 0;
   font-size: 2.5rem;
 }
+.header-name {
+  color: rgb(241, 245, 249);
+  text-shadow: 1px 1px 3px black;
+}
 /* nav styles */
 .mobile-hamburger {
   padding-right: 20px;
@@ -37,7 +41,7 @@ h1 {
   width: 100%;
   top: 5rem;
   left: 48px;
-  background-color: #ff9776;
+  background-color: rgba(241, 245, 249, 0.5);
   display: none;
   margin: 0;
 }
@@ -46,12 +50,18 @@ h1 {
   text-align: center;
   padding: 10px 0;
   text-decoration: none;
+  text-shadow: 1px 1px 3px black;
   font-size: 1.2rem;
   font-weight: bold;
   text-transform: uppercase;
+  color: rgb(241, 245, 249);
+  transition: 250ms ease-in-out;
 }
 .nav-links a:hover, a:focus {
-  background-color: #ff9776;
+  background-color: rgba(241, 245, 249, 0.5);
+  text-shadow: none;
+  color: black;
+  transform: translateY(-3px);
 }
 .expanded {
   display: unset;
