Add background image to base layout

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -22,5 +22,15 @@ const { pageTitle } = Astro.props;
     <script>
       import "../scripts/menu.js";
     </script>
+    <style>
+      body {
+        background-image: url("../src/images/gallery/lifeline.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        min-height: 100vh;
+        background-size: cover;
+      }
+    </style>
 	</body>
 </html>
