--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,7 @@ body {
   line-height: 1.5;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 }
 
