--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  margin: 0 auto;
+  margin: 0;
   width: 100%;
   line-height: 1.5;
   display: flex;
@@ -68,7 +68,6 @@ h1 {
 }
 @media screen and (min-width: 636px) {
   .nav-links {
-    margin-left: 5rem;
     display: block;
     position: static;
     width: auto;
