--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -1,12 +1,12 @@
 ---
 import Achieve from "../components/Achieve.astro";
-import PhotoDisplay from "../components/PhotoDisplay.astro";
 import Sponsor from "../components/Sponsor.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
+
+const imageURL = "../src/images/gallery/Wolverine.Lite.jpg"
 ---
 
-<BaseLayout pageTitle="Amity the Athlete">
+<BaseLayout pageTitle="Amity the Athlete" img={imageURL}>
   <Achieve />
   <Sponsor />
-  <PhotoDisplay />
 </BaseLayout>
