--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -43,18 +43,31 @@ const imageURL = "../src/images/gallery/Wolverine.Lite.jpg"
     align-self: end;
     cursor: pointer;
     position: absolute;
+    bottom: 24px;
     left: 50%;
+    height: 50px;
     width: 150px;
-    text-align: center;
+    margin-left: -75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .scroll-container::before {
     content: "\21D3";
-    height: 32px;
-    width: 32px;
+    color: rgb(255, 255, 255);
     font-size: 48px;
+    background-color: rgba(0, 0, 0, 0.25);
+    line-height: 54px;
+    width: 54px;
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
   }
   .scroll-container > span {
     display: none;
+    text-transform: uppercase;
+    text-align: center;
+    color: rgb(255, 255, 255);
   }
   .scroll-container:hover::before {
     display: none;
