Mobile style for wall achievements

--- a/src/components/Achieve.astro
+++ b/src/components/Achieve.astro
@@ -6,28 +6,28 @@ const bigwall = [
     climb: 'El Corazon',
     grade: '5.13b',
     pitches: 32,
-    style: 'free, ground-up',
+    style: 'ground-up',
     location: 'Yosemite',
   },
   {
     climb: 'FRIAD: Freerider In A Day',
     grade: '5.13a',
     pitches: 32,
-    style: 'free, self-supported, no rehearsal or stashing',
+    style: 'self-supported, no rehearsal or stashing',
     location: 'Yosemite',
   },
   {
     climb: 'Golden Gate',
     grade: '5.13a',
     pitches: 33,
-    style: 'free, ground-up',
+    style: 'ground-up',
     location: 'Yosemite',
   },
   {
     climb: 'Freerider',
     grade: '5.13a',
     pitches: 31,
-    style: 'free, ground-up',
+    style: 'ground-up',
     location: 'Yosemite',
   }
 ];
@@ -36,28 +36,28 @@ const multi = [
     climb: 'The Honeymoon is Over',
     grade: '5.13c',
     pitches: 8,
-    style: 'free, redpoint',
+    style: 'redpoint',
     location: 'RMNP',
   },
   {
     climb: 'Mark of the Beast',
     grade: '5.13b',
     pitches: 5,
-    style: 'free, redpoint',
+    style: 'redpoint',
     location: 'Yosemite'
   },
   {
     climb: 'Barnacle Scars',
     grade: '5.13',
     pitches: 3,
-    style: 'first ascent, free, redpoint',
+    style: 'first ascent, redpoint',
     location: 'RMNP'
   },
   {
     climb: 'Liberty Crack',
     grade: '5.13b',
     pitches: 12,
-    style: 'free, redpoint',
+    style: 'redpoint',
     location: 'North Cascades'
   }
 ];
