Add main fonts, body and header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,6 +12,7 @@ import Nav from "./Nav.astro";
   header {
     display: flex;
     justify-content: space-between;
+    font-family: "Unbound", Georgia, 'Times New Roman', Times, serif;
   }
   .header-name {
     text-transform: uppercase;
