--- a/src/components/Wall.astro
+++ b/src/components/Wall.astro
@@ -8,10 +8,10 @@ const styleText = style ? `, ${style}` : '';
   <p>{grade}{pitchesText}{styleText}</p>
 </div>
 <style>
-  p {
-    margin-top: 0;
+  div {
+    margin-bottom: 1rem;
   }
-  p:first-child {
-    margin-bottom: 0;
+  p {
+    margin: 0;
   }
 </style>
