--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -25,8 +25,10 @@ const imageURL = "../src/images/gallery/Wolverine.Lite.jpg"
     grid-template-rows: repeat(4, 1fr);
   }
   p {
+    font-family: "Unbound", Georgia, 'Times New Roman', Times, serif;
     font-size: 70px;
     font-weight: 500;
+    color: white;
     padding: 0 0 0 5vw;
     margin: 0;
   }
