Change sponsor font

--- a/src/components/Sponsor.astro
+++ b/src/components/Sponsor.astro
@@ -101,10 +101,11 @@ const sponsors = [
     color: white;
     width: 100vw;
     text-align: center;
-    padding: 5vh 0;
+    padding: 4vh 0;
   }
   h2 {
     text-transform: uppercase;
+    font-family: "Unbound", "Playfair", Georgia, 'Times New Roman', Times, serif;
   }
   .sponsors-wrapper {
     padding: 20px;
