--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,7 +36,7 @@ h1 {
 }
 /* nav styles */
 .mobile-hamburger {
-  padding-right: 20px;
+  /* padding-right: 20px; */
   cursor: pointer;
 }
 .mobile-hamburger .line {
@@ -47,12 +47,15 @@ h1 {
   background-color: rgb(245, 245, 245);
 }
 .nav-links {
-  width: 100%;
+  width: 100vw;
   top: 5rem;
   left: 48px;
   background-color: rgba(241, 245, 249, 0.5);
-  display: none;
+  /* display: none; */
   margin: 0;
+  transform: translateX(-100vw);
+  transition-duration: 250ms;
+  transition-timing-function: ease-in-out;
 }
 .nav-links a {
   display: block;
@@ -74,6 +77,7 @@ h1 {
 }
 .expanded {
   display: unset;
+  transform: translateX(0vw)
 }
 @media screen and (min-width: 636px) {
   .nav-links {
