Working on mobile nav menu style

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -8,11 +8,12 @@
     <a href="/content">Content</a>
     <a href="/contact">Contact</a>
   </div>
+  <div class="nav-overlay"></div>
 </nav>
 <style>
   nav {
-    display: flex;
+    /* display: flex;
     justify-content: flex-end;
-    align-items: center;
+    align-items: center; */
   }
 </style>
