--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,20 +47,27 @@ h1 {
   background-color: rgb(245, 245, 245);
 }
 .nav-links {
-  width: 100vw;
-  top: 5rem;
-  left: 48px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 200px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
   background-color: rgba(241, 245, 249, 0.5);
   /* display: none; */
   margin: 0;
-  transform: translateX(-100vw);
+  transform: translateX(200px);
   transition-duration: 250ms;
   transition-timing-function: ease-in-out;
 }
 .nav-links a {
   display: block;
   text-align: center;
-  padding: 10px 0;
+  /* padding: 10px 0; */
+  padding: 0;
   text-decoration: none;
   text-shadow: 1px 1px 3px black;
   font-size: 1.2rem;
@@ -75,9 +82,22 @@ h1 {
   color: black;
   transform: translateY(-3px);
 }
+.nav-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  /* z-index: 2; */
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  visibility: hidden;
+  opacity: 0;
+}
 .expanded {
   display: unset;
-  transform: translateX(0vw)
+  transform: translateX(0);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 @media screen and (min-width: 636px) {
   .nav-links {
