Working on mobile menu display

--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -44,7 +44,7 @@ const imageURL = "../src/images/gallery/Wolverine.Lite.jpg"
     justify-self: center;
     align-self: end;
     cursor: pointer;
-    position: absolute;
+    /* position: absolute; */
     bottom: 24px;
     left: 50%;
     height: 50px;
