--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,7 +57,7 @@ h1 {
   justify-content: space-evenly;
   align-items: center;
   background-color: rgba(241, 245, 249, 0.5);
-  /* display: none; */
+  z-index: 2;
   margin: 0;
   transform: translateX(200px);
   transition-duration: 250ms;
@@ -67,7 +67,7 @@ h1 {
   display: block;
   text-align: center;
   /* padding: 10px 0; */
-  padding: 0;
+  padding: 10px 0;
   text-decoration: none;
   text-shadow: 1px 1px 3px black;
   font-size: 1.2rem;
@@ -88,16 +88,19 @@ h1 {
   left: 0;
   width: 100vw;
   height: 100vh;
-  /* z-index: 2; */
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
   visibility: hidden;
   opacity: 0;
 }
-.expanded {
+.expanded > .nav-links {
   display: unset;
   transform: translateX(0);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+}
+.expanded > .nav-overlay {
+  visibility: visible;
+  opacity: 1;
 }
 @media screen and (min-width: 636px) {
   .nav-links {
